nullaway_error_4445A431-CB71-4851-8D62-41B1F0854026.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context-support/src/main/java/org/springframework/scheduling/quartz/LocalDataSourceJobStore.java:112: error: [NullAway] passing @Nullable parameter 'dataSource' where @NonNull is required
						return DataSourceUtils.doGetConnection(dataSource);
						                                       ^
    (see http://t.uber.com/nullaway )
